add a comment about css resets

--- a/client/src/sass/index.sass
+++ b/client/src/sass/index.sass
@@ -1,3 +1,6 @@
+// CSS reset should go in here, if we choose to use one since it's the
+// style that gets applied to the entire app
+
 body
   margin: 0
   padding: 0
