--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -1,5 +1,10 @@
 @import '_colors.scss';
 
+/*
+   Most of these are from the github page, and chainging widths and
+   heights too drastically will cause the animations to be messed up.
+ */
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
@@ -18,6 +23,7 @@
 .bm-cross-button {
   height: 24px;
   width: 24px;
+  margin: 0 12px;
 }
 
 /* Color/shape of close button cross */
@@ -30,6 +36,7 @@
   background: $dark-bg;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
+  overflow: hidden  !important;
 }
 
 /* Morph shape necessary with bubble or elastic */
