--- a/client/src/sass/nav.scss
+++ b/client/src/sass/nav.scss
@@ -1,7 +1,8 @@
 @import '_colors';
 .navbar {
-  background-color: $dark-bg;
+  background-color: $white;
   height: 100px;
+  border-bottom: 20px solid $orange; 
 
   /* grid stuff */
   display: grid;
@@ -23,4 +24,6 @@
     grid-column: 3/3;
     grid-row: 1;
   }
+
+
 }
