--- a/client/src/sass/_mixins.scss
+++ b/client/src/sass/_mixins.scss
@@ -3,3 +3,21 @@
   align-items: center;
   justify-content: center;
 }
+
+ @mixin breakpoint($point) {
+   @if $point == desktop {
+     @media (min-width: 1100px) { @content ; }
+  }
+   @else if $point == laptop {
+     @media (min-width: 64em) { @content ; }
+  }
+    @else if $point == tablet {
+     @media (min-width: 768px) { @content ; }
+  }
+   @else if $point == phablet {
+     @media (min-width: 37.5em)  { @content ; }
+  }
+  @else if $point == mobileonly {
+     @media (max-width: 37.5em)  { @content ; }
+  }
+}
