--- a/client/src/sass/brand.scss
+++ b/client/src/sass/brand.scss
@@ -8,7 +8,16 @@
 }
 
 .logo {
-        padding-left: 18%;
-        width: 250px;
-        height: auto;
+	padding-left: 18%;
+	width: 250px;
+	height: auto;
+
+	@include breakpoint(desktop){
+		width: 400px;
+		padding-left: none;
+	}
+	
+
 }
+
+
