--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -1,4 +1,5 @@
 @import '_colors.scss';
+@import '_mixins.scss';
 
 /*
    Most of these are from the github page, and chainging widths and
@@ -12,6 +13,10 @@
   height: 30px;
   left: 36px;
   top: 36px;
+
+  @include breakpoint(tablet){
+    top: 48px;
+  }
 }
 
 /* Color/shape of burger icon bars */
@@ -31,7 +36,7 @@
   background: $orange;
 }
 
-/* General sidebar styles */
+/* General sidebar styles JDT */
 .bm-menu {
   background: $dark-bg;
   padding: 2.5em 1.5em 0;
@@ -62,3 +67,10 @@
   font-size: 2em;
   margin-top: 30px;
 }
+
+.d-link {
+  color: $orange;
+
+}
+
+
