--- a/client/src/sass/nav.scss
+++ b/client/src/sass/nav.scss
@@ -1,8 +1,17 @@
 @import '_colors';
+@import '_mixins';
 .navbar {
   background-color: $white;
   height: 100px;
   border-bottom: 20px solid $orange; 
+
+  @include breakpoint(desktop){
+    height: 120px;
+  }
+
+  @include breakpoint(tablet){
+    height: 125px;
+  }
 
   /* grid stuff */
   display: grid;
@@ -13,6 +22,7 @@
   .one {
     grid-column: 1 / 3;
     grid-row: 1;
+    @include centerify;
   }
 
   .two {
