media query for tablet fix

--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -47,6 +47,7 @@
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
   fill: $dark-bg;
+  right: 1px; 
 }
 
 /* Wrapper for item list */
