--- a/client/src/sass/brand.scss
+++ b/client/src/sass/brand.scss
@@ -12,12 +12,17 @@
 	width: 250px;
 	height: auto;
 
+	@include breakpoint(tablet){
+		width: 300px;
+		padding: 0;
+	}
+
 	@include breakpoint(desktop){
 		width: 400px;
-		padding-left: none;
+		padding-left: 0px;
 	}
-	
 
+	
 }
 
 
