--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -47,7 +47,7 @@
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
   fill: $dark-bg;
-  right: 1px; 
+  right: 1px;
 }
 
 /* Wrapper for item list */
@@ -69,9 +69,6 @@
   margin-top: 30px;
 }
 
-.d-link {
-  color: $orange;
-
+.bm-link-highlight {
+  font-weight: bold;
 }
-
-
