--- a/client/src/sass/loginform.scss
+++ b/client/src/sass/loginform.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 10%;
 
 
   .input, .button {
@@ -12,8 +13,12 @@
 
   .input {
     width: 300px;
+    height: 50px; 
     box-sizing: border-box;
     border: none;
+    font-size: 18px;
+
+
 
     &:focus {
       border-bottom: 3px $orange solid;
@@ -39,6 +44,7 @@
       text-decoration: none;
     }
   }
+
 
 
 
