--- a/client/src/sass/loginform.scss
+++ b/client/src/sass/loginform.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 10%;
+  padding-top: 10px;
 
 
   .input, .button {
@@ -13,17 +13,11 @@
 
   .input {
     width: 300px;
-    height: 50px; 
+    height: 50px;
     box-sizing: border-box;
     border: none;
-<<<<<<< HEAD
     font-size: 2em;
-=======
-    font-size: 18px;
 
-
-
->>>>>>> 3e77f0a0b3ff55ce2aabf0200f4f351b59398387
     &:focus {
       border-bottom: 3px $orange solid;
     }
@@ -47,8 +41,4 @@
       text-decoration: none;
     }
   }
-
-
-
-
 }
