--- a/client/src/sass/index.sass
+++ b/client/src/sass/index.sass
@@ -1,8 +1,9 @@
 // CSS reset should go in here, if we choose to use one since it's the
 // style that gets applied to the entire app
+@import '_colors.scss'
 
 body
   margin: 0
   padding: 0
   font-family: sans-serif
-  background-color: #8C8686
+  background-color: $lightgrey
