--- a/client/src/sass/loginform.scss
+++ b/client/src/sass/loginform.scss
@@ -1,45 +1,1 @@
-@import '_colors';
-
-.loginform {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 10px;
-
-
-  .input, .button {
-    margin-top: 10px;
-  }
-
-  .input {
-    width: 300px;
-    height: 50px;
-    box-sizing: border-box;
-    border: none;
-    font-size: 2em;
-
-    &:focus {
-      border-bottom: 3px $orange solid;
-      outline-width: 0;
-    }
-  }
-
-  .button {
-    background-color: $orange;
-    border: none;
-    color: $white;
-    width: 150px;
-    height: 50px;
-    font-size: 2em;
-    background: $orange;
-    background-image: linear-gradient(to bottom, $orange, darken($orange, 10%));
-    border-radius: 5px;
-    color: $white;
-    text-decoration: none;
-
-    &:hover {
-      background: $orange;
-      text-decoration: none;
-    }
-  }
-}
+@import 'forms';
