--- a/client/src/sass/home.scss
+++ b/client/src/sass/home.scss
@@ -1,1 +1,22 @@
 @import '_buttons';
+@import '_colors';
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+
+  .button {
+    @extend .button;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 10px;
+  }
+
+  p {
+    font-size: 1.5em;
+    color: $orange;
+  }
+}
