use variables for hamburger background color

--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -1,6 +1,8 @@
 @import '_colors.scss';
 @import '_mixins.scss';
 
+$hamburger-bg: $dark-bg;
+
 /*
    Most of these are from the github page, and chainging widths and
    heights too drastically will cause the animations to be messed up.
@@ -38,7 +40,7 @@
 
 /* General sidebar styles JDT */
 .bm-menu {
-  background: $dark-bg;
+  background: $hamburger-bg;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
   overflow: hidden  !important;
@@ -46,13 +48,13 @@
 
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
-  fill: $dark-bg;
+  fill: $hamburger-bg;
   right: 1px;
 }
 
 /* Wrapper for item list */
 .bm-item-list {
-  color: #b8b7ad;
+  color: $dark-bg;
   padding: 0.8em;
 }
 
