--- a/client/src/sass/_buttons.scss
+++ b/client/src/sass/_buttons.scss
@@ -1,4 +1,5 @@
 @import '_colors';
+@import '_mixins';
 
 .button {
   background-color: $orange;
@@ -12,6 +13,9 @@
   border-radius: 5px;
   color: $white;
   text-decoration: none;
+  padding: 10px; 
+  margin: 10px; 
+  @include centerify 
 
   &:hover {
     background: $orange;
