--- a/client/src/sass/_mixins.scss
+++ b/client/src/sass/_mixins.scss
@@ -4,6 +4,12 @@
   justify-content: center;
 }
 
+@mixin searchIcon {
+  background-image: url(/images/hP_searchIcon.png);
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+}
 
  @mixin breakpoint($point) {
    @if $point == desktop {
