--- a/client/src/sass/dashboard.scss
+++ b/client/src/sass/dashboard.scss
@@ -1,28 +1,33 @@
 @import '_colors';
 @import '_mixins';
 @import '_buttons';
-
 .button {
     @extend .button;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 10px;
-  }
-
-.searchBtn{
-	@include searchIcon
 }
 
-.searchBar{
+.searchBtn {
+    @include searchIcon 
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    margin: 10px;
+}
+
+.searchBar {
     width: 250px;
     height: 50px;
     box-sizing: border-box;
     border: none;
     font-size: 2em;
-
     &:focus {
-      border-bottom: 3px $orange solid;
-      outline-width: 0;
+        border-bottom: 3px $orange solid;
+        outline-width: 0;
     }
+
 }
+
+
