--- a/client/src/sass/_buttons.scss
+++ b/client/src/sass/_buttons.scss
@@ -7,13 +7,11 @@
   color: $white;
   width: 150px;
   height: 50px;
-  font-size: 2em;
   background: $orange;
   background-image: linear-gradient(to bottom, $orange, darken($orange, 5%));
   border-radius: 5px;
   color: $white;
   text-decoration: none;
-  padding: 10px;
   margin: 10px;
 
   /*
@@ -23,6 +21,13 @@
    */
   font-size: 2em;
   line-height: 1em;
+
+  /* this is for anchor links (or things that turn into them, like <Link>) */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
 
   &:hover {
     background: $orange;
