--- a/client/src/sass/dashboard.scss
+++ b/client/src/sass/dashboard.scss
@@ -2,23 +2,31 @@
 @import '_mixins';
 @import '_buttons';
 
+$dogSearchButton: './../img/hP_searchIcon.png';
+
 .searchBtn {
-    @include searchIcon
-    border-radius: 5px;
-    border: none;
-    padding: 10px;
-    margin: 10px;
+
+  /* for image */
+  background-image: url($dogSearchButton);
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+  margin: 10px;
 }
 
 .searchBar {
-    width: 250px;
-    height: 50px;
-    box-sizing: border-box;
-    border: none;
-    font-size: 2em;
-    &:focus {
-        border-bottom: 3px $orange solid;
-        outline-width: 0;
-    }
+  width: 250px;
+  height: 50px;
+  box-sizing: border-box;
+  border: none;
+  font-size: 2em;
+  &:focus {
+    border-bottom: 3px $orange solid;
+    outline-width: 0;
+  }
 
 }
