--- a/client/src/sass/forms.scss
+++ b/client/src/sass/forms.scss
@@ -9,20 +9,20 @@
   padding-top: 10px;
 
 
-  .input {
+  input[type=text],
+  input[type=password] {
     margin-top: 10px;
-  }
+    width: 250px;
 
-  .input {
-    width: 300px;
-    height: 50px;
-    box-sizing: border-box;
     border: none;
-    font-size: 2em;
+    border-bottom: 3px $white solid;
 
+    height: 50px;
+    outline: none;
+    font-size: 2em;
     &:focus {
       border-bottom: 3px $orange solid;
-      outline-width: 0;
+      outline: none;
     }
   }
 }
