fix visual bugs with search bar and button

--- a/client/src/sass/dashboard.scss
+++ b/client/src/sass/dashboard.scss
@@ -3,14 +3,29 @@
 @import '_buttons';
 
 $dogSearchButton: './../img/hP_searchIcon.png';
+$search-bar-height: 50px;
+
+
+.dashboard {
+  flex-basis: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#searchBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .searchBtn {
-
   /* for image */
   background-image: url($dogSearchButton);
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: $search-bar-height;
+  height: $search-bar-height;
 
   border-radius: 5px;
   border: none;
@@ -20,7 +35,7 @@ $dogSearchButton: './../img/hP_searchIcon.png';
 
 .searchBar {
   width: 250px;
-  height: 50px;
+  height: $search-bar-height;
   box-sizing: border-box;
   border: none;
   font-size: 2em;
