--- a/client/src/sass/groupdisplay.scss
+++ b/client/src/sass/groupdisplay.scss
@@ -1,5 +1,12 @@
 @import '_colors';
-
+@import '_mixins';
 .group-box {
-  background-color: $white;
+    margin-top: 30px;
+    margin-bottom: 20px; 
+    color: $dark-bg;
+    height: 100px;
+    width: 320px;
+    background-color: $white;
+    background-opacity: .5;
+
 }
