--- a/client/src/sass/_buttons.scss
+++ b/client/src/sass/_buttons.scss
@@ -13,7 +13,8 @@
   color: $white;
   text-decoration: none;
   margin: 10px;
-
+  @include centerify
+  padding-top: 10px;
   /*
      this is needed for input submit buttons, they do not follow the
      same rules as anchor tags do (e.g. the <Link to="blah"> buttons on
@@ -34,3 +35,20 @@
     text-decoration: none;
   }
 }
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
