--- a/client/src/sass/forms.scss
+++ b/client/src/sass/forms.scss
@@ -8,6 +8,9 @@
   align-items: center;
   padding-top: 10px;
 
+  input[type=submit] {
+    padding: 0;
+  }
 
   input[type=text],
   input[type=password] {
