--- a/client/src/sass/hamburger.scss
+++ b/client/src/sass/hamburger.scss
@@ -10,7 +10,7 @@ $hamburger-bg: $dark-bg;
 
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: fixed;
+  position: relative;
   width: 36px;
   height: 30px;
   left: 36px;
