--- a/client/src/sass/groupdisplay.scss
+++ b/client/src/sass/groupdisplay.scss
@@ -1,11 +1,11 @@
 @import '_colors';
 @import '_mixins';
 .group-box {
-    margin-top: 30px;
-    margin-bottom: 20px;
-    color: $dark-bg;
-    height: 100px;
-    width: 320px;
-    background-color: $white;
-    background-opacity: .5;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: $dark-bg;
+  height: auto;
+  width: 320px;
+  background-color: $white;
+  background-opacity: .5;
 }
