--- a/client/src/sass/forms.scss
+++ b/client/src/sass/forms.scss
@@ -18,7 +18,7 @@
     width: 250px;
 
     border: none;
-    border-bottom: 3px $white solid;
+    @include borderify($lightgrey)
 
     height: 50px;
     outline: none;
