--- a/client/src/sass/dashboard.scss
+++ b/client/src/sass/dashboard.scss
@@ -1,10 +1,10 @@
-@import '_colors';
 @import '_mixins';
 @import '_buttons';
+@import '_colors';
 
 $dogSearchButton: './../img/hP_searchIcon.png';
 $search-bar-height: 50px;
-$search-button-margin: 10px;
+
 
 .dashboard {
   flex-basis: max-content;
@@ -30,16 +30,15 @@ $search-button-margin: 10px;
   border-radius: 5px;
   border: none;
   padding: 10px;
-  margin: $search-button-margin;
+  margin: 10px;
 }
 
 .searchBar {
-  width: 320px - $search-bar-height + $search-button-margin/2;
+  width: 250px;
   height: $search-bar-height;
   box-sizing: border-box;
   border: none;
   font-size: 2em;
-  @include borderify($lightgrey)
   &:focus {
     border-bottom: 3px $orange solid;
     outline-width: 0;
@@ -48,6 +47,6 @@ $search-button-margin: 10px;
 }
 
 #createButton {
-  margin: 0 auto;
-  @include centerify
+  margin: 0 auto; 
+  @include centerify 
 }
