--- a/client/src/sass/dogLoader.scss
+++ b/client/src/sass/dogLoader.scss
@@ -1,3 +1,10 @@
+@import '_mixins';
+@import '_buttons';
+@import '_colors';
+
+$dogLoader: './../img/hushPuppy_load.png';
+
+
 @keyframes clockwisespin {
     from {
         transform: rotate(0deg);
