--- a/client/src/sass/groupdisplay.scss
+++ b/client/src/sass/groupdisplay.scss
@@ -1,5 +1,6 @@
 @import '_colors';
 @import '_mixins';
+
 .group-box {
   margin-top: 30px;
   margin-bottom: 20px;
@@ -9,4 +10,19 @@
   padding: 10px;
   @include borderify($lightgrey)
   background-color: $white;
+}
+
+ul {
+  list-style: none;
+  font-size: 24px;
+  padding-left: 20px;
+  a {
+    text-decoration: none;
+    color: $orange;
+
+    &:hover {
+      color: darken($orange, 20%)
+    }
+  }
+
 }
