styling on messages

--- a/client/src/sass/messagedisplay.scss
+++ b/client/src/sass/messagedisplay.scss
@@ -31,3 +31,11 @@
     height: auto;
   }
 }
+
+.message{
+  background-color: $white;
+}
+
+.message:nth-child(even) {
+  background-color: darken($white, 10%);
+}
