--- a/client/src/sass/forms.scss
+++ b/client/src/sass/forms.scss
@@ -9,7 +9,6 @@
   padding-top: 10px;
 
   input[type=submit] {
-    padding: 0;
   }
 
   input[type=text],
@@ -29,6 +28,7 @@
   height: 50px;
   outline: none;
   font-size: 2em;
+  padding:0px;
   &:focus {
     border-bottom: 3px $orange solid;
     outline: none;
